--- a/Backend/TodoList.Api/TodoList.API.Tests/.travis.yml
+++ b/Backend/TodoList.Api/TodoList.API.Tests/.travis.yml
@@ -11,4 +11,4 @@ before_script:
   - node_modules/.bin/newman --version
 
 script:
-  - node_modules/.bin/newman run https://api.postman.com/collections/8056849-75c1b5c2-9c5a-439f-b9d5-afc6930b1d65?access_key=PMAT-01GWE8H8CJ4HXPCT34VYTA0A73
+  - node_modules/.bin/newman run https://api.postman.com/collections/8056849-75c1b5c2-9c5a-439f-b9d5-afc6930b1d65?access_key=${TOKENHERE}
